--- a/aws.ipynb
+++ b/aws.ipynb
@@ -2,33 +2,249 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'boto3'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/pearl/aws-covid-pipeline/aws_covid_pipeline/aws.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pearl/aws-covid-pipeline/aws_covid_pipeline/aws.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mboto3\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pearl/aws-covid-pipeline/aws_covid_pipeline/aws.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pearl/aws-covid-pipeline/aws_covid_pipeline/aws.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'boto3'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import boto3\n",
     "import pandas as pd\n",
     "import json\n",
     "import psycopg2\n",
-    "import time "
+    "import time \n",
+    "from io import StringIO"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AWS_ACCESS_KEY= 'AKIAX4JVCDCECFATD3OG'\n",
+    "AWS_SECRET_KEY='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'\n",
+    "AWS_REGION = 'us-east-2'\n",
+    "SCHEMA_NAME = 'covid_nineteen'\n",
+    "S3_STAGING_DIR = 's3://covidnineteenin23/output/'\n",
+    "S3_BUCKET_NAME = 'covidnineteenin23'\n",
+    "S3_OUTPUT_DIRECTORY = 'output'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "athena_client = boto3.client(\n",
+    "    'athena',\n",
+    "aws_access_key_id = AWS_ACCESS_KEY,\n",
+    "aws_secret_access_key=AWS_SECRET_KEY,\n",
+    "region_name=AWS_REGION,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dict = {}\n",
+    "def download_and_load_query_results(client: boto3.client, query_response: Dict\n",
+    "                                   ) -> pd.DataFrame:\n",
+    "    \n",
+    "    while True:\n",
+    "        try:\n",
+    "    # This function only loads the first 1000 rows\n",
+    "            client.get_query_results(\n",
+    "                QueryExecutionId=query_response[\"QueryExecutionId\"]\n",
+    "            )\n",
+    "            break\n",
+    "        except Exception as err:\n",
+    "            if \"not yet finished\" in str(err):\n",
+    "                time.sleep (0.001)\n",
+    "            else:\n",
+    "                raise err\n",
+    "    temp_file_location: str = \"athena_query_results.csv\"\n",
+    "    s3_client = boto3.client(\n",
+    "        \"s3\",\n",
+    "        aws_access_key_id=AWS_ACCESS_KEY,\n",
+    "        aws_secret_access_key=AWS_SECRET_KEY,\n",
+    "        region_name=AWS_REGION,\n",
+    "    )\n",
+    "    \n",
+    "    s3_client.download_file(\n",
+    "        S3_BUCKET_NAME,\n",
+    "    f\"{S3_OUTPUT_DIRECTORY}/{query_response['QueryExecutionId']}.csv\",\n",
+    "        temp_file_location,\n",
+    "    )\n",
+    "    return pd. read_csv(temp_file_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = athena_client.start_query_execution (\n",
+    "    QueryString=\"SELECT * FROM cdcpfizer\",\n",
+    "    QueryExecutionContext={\"Database\": SCHEMA_NAME},\n",
+    "    ResultConfiguration={\n",
+    "        \"OutputLocation\": S3_STAGING_DIR,\n",
+    "        \"EncryptionConfiguration\": {\"EncryptionOption\": \"SSE_S3\"},\n",
+    "    },\n",
+    ")\n",
+    "df_data = download_and_load_query_results(athena_client, response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'QueryExecutionId': '18c31b7b-f63f-49b7-ae8d-5886fe31b094',\n",
+       " 'ResponseMetadata': {'RequestId': '35e516a8-18a0-4f93-839c-0f2566fcdabe',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'date': 'Sat, 28 Jan 2023 22:14:06 GMT',\n",
+       "   'content-type': 'application/x-amz-json-1.1',\n",
+       "   'content-length': '59',\n",
+       "   'connection': 'keep-alive',\n",
+       "   'x-amzn-requestid': '35e516a8-18a0-4f93-839c-0f2566fcdabe'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdcpfizer = download_and_load_query_results (athena_client, response)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jurisdiction</th>\n",
+       "      <th>week_of_allocations</th>\n",
+       "      <th>1st_dose_allocations</th>\n",
+       "      <th>2nd_dose_allocations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>2021-06-21T00:00:00.000</td>\n",
+       "      <td>54360</td>\n",
+       "      <td>54360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2021-06-21T00:00:00.000</td>\n",
+       "      <td>21420</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>2021-06-21T00:00:00.000</td>\n",
+       "      <td>104580</td>\n",
+       "      <td>104580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>New Hampshire</td>\n",
+       "      <td>2021-06-21T00:00:00.000</td>\n",
+       "      <td>21420</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>2021-06-21T00:00:00.000</td>\n",
+       "      <td>17280</td>\n",
+       "      <td>17280</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    jurisdiction      week_of_allocations  1st_dose_allocations  \\\n",
+       "0    Connecticut  2021-06-21T00:00:00.000                 54360   \n",
+       "1          Maine  2021-06-21T00:00:00.000                 21420   \n",
+       "2  Massachusetts  2021-06-21T00:00:00.000                104580   \n",
+       "3  New Hampshire  2021-06-21T00:00:00.000                 21420   \n",
+       "4   Rhode Island  2021-06-21T00:00:00.000                 17280   \n",
+       "\n",
+       "   2nd_dose_allocations  \n",
+       "0                 54360  \n",
+       "1                 21420  \n",
+       "2                104580  \n",
+       "3                 21420  \n",
+       "4                 17280  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdcpfizer.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -42,9 +258,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
