--- a/aws.ipynb
+++ b/aws.ipynb
@@ -19,15 +19,7 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "AWS_ACCESS_KEY= 'AKIAX4JVCDCECFATD3OG'\n",
-    "AWS_SECRET_KEY='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'\n",
-    "AWS_REGION = 'us-east-2'\n",
-    "SCHEMA_NAME = 'covid_nineteen'\n",
-    "S3_STAGING_DIR = 's3://covidnineteenin23/output/'\n",
-    "S3_BUCKET_NAME = 'covidnineteenin23'\n",
-    "S3_OUTPUT_DIRECTORY = 'output'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -95,7 +87,7 @@
     "        \"EncryptionConfiguration\": {\"EncryptionOption\": \"SSE_S3\"},\n",
     "    },\n",
     ")\n",
-    "df_data = download_and_load_query_results(athena_client, response)"
+    "cdcpfizer = download_and_load_query_results(athena_client, response)"
    ]
   },
   {
@@ -129,109 +121,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdcpfizer = download_and_load_query_results (athena_client, response)\n",
-    "\n"
+    "\n",
+    "\n",
+    "response = athena_client.start_query_execution (\n",
+    "    QueryString=\"SELECT * FROM countrycodecsv\",\n",
+    "    QueryExecutionContext={\"Database\": SCHEMA_NAME},\n",
+    "    ResultConfiguration={\n",
+    "        \"OutputLocation\": S3_STAGING_DIR,\n",
+    "        \"EncryptionConfiguration\": {\"EncryptionOption\": \"SSE_S3\"},\n",
+    "    },\n",
+    ")\n",
+    "countrycodecsv = download_and_load_query_results(athena_client, response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>jurisdiction</th>\n",
-       "      <th>week_of_allocations</th>\n",
-       "      <th>1st_dose_allocations</th>\n",
-       "      <th>2nd_dose_allocations</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Connecticut</td>\n",
-       "      <td>2021-06-21T00:00:00.000</td>\n",
-       "      <td>54360</td>\n",
-       "      <td>54360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Maine</td>\n",
-       "      <td>2021-06-21T00:00:00.000</td>\n",
-       "      <td>21420</td>\n",
-       "      <td>21420</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Massachusetts</td>\n",
-       "      <td>2021-06-21T00:00:00.000</td>\n",
-       "      <td>104580</td>\n",
-       "      <td>104580</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>New Hampshire</td>\n",
-       "      <td>2021-06-21T00:00:00.000</td>\n",
-       "      <td>21420</td>\n",
-       "      <td>21420</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Rhode Island</td>\n",
-       "      <td>2021-06-21T00:00:00.000</td>\n",
-       "      <td>17280</td>\n",
-       "      <td>17280</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    jurisdiction      week_of_allocations  1st_dose_allocations  \\\n",
-       "0    Connecticut  2021-06-21T00:00:00.000                 54360   \n",
-       "1          Maine  2021-06-21T00:00:00.000                 21420   \n",
-       "2  Massachusetts  2021-06-21T00:00:00.000                104580   \n",
-       "3  New Hampshire  2021-06-21T00:00:00.000                 21420   \n",
-       "4   Rhode Island  2021-06-21T00:00:00.000                 17280   \n",
-       "\n",
-       "   2nd_dose_allocations  \n",
-       "0                 54360  \n",
-       "1                 21420  \n",
-       "2                104580  \n",
-       "3                 21420  \n",
-       "4                 17280  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cdcpfizer.head()"
+    "response = athena_client.start_query_execution (\n",
+    "    QueryString=\"SELECT * FROM engimahju\",\n",
+    "    QueryExecutionContext={\"Database\": SCHEMA_NAME},\n",
+    "    ResultConfiguration={\n",
+    "        \"OutputLocation\": S3_STAGING_DIR,\n",
+    "        \"EncryptionConfiguration\": {\"EncryptionOption\": \"SSE_S3\"},\n",
+    "    },\n",
+    ")\n",
+    "engimahju = download_and_load_query_results(athena_client, response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = athena_client.start_query_execution (\n",
+    "    QueryString=\"SELECT * FROM statesdaily\",\n",
+    "    QueryExecutionContext={\"Database\": SCHEMA_NAME},\n",
+    "    ResultConfiguration={\n",
+    "        \"OutputLocation\": S3_STAGING_DIR,\n",
+    "        \"EncryptionConfiguration\": {\"EncryptionOption\": \"SSE_S3\"},\n",
+    "    },\n",
+    ")\n",
+    "statesdaily = download_and_load_query_results(athena_client, response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = athena_client.start_query_execution (\n",
+    "    QueryString=\"SELECT * FROM us\",\n",
+    "    QueryExecutionContext={\"Database\": SCHEMA_NAME},\n",
+    "    ResultConfiguration={\n",
+    "        \"OutputLocation\": S3_STAGING_DIR,\n",
+    "        \"EncryptionConfiguration\": {\"EncryptionOption\": \"SSE_S3\"},\n",
+    "    },\n",
+    ")\n",
+    "us = download_and_load_query_results(athena_client, response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = athena_client.start_query_execution (\n",
+    "    QueryString=\"SELECT * FROM uscounty\",\n",
+    "    QueryExecutionContext={\"Database\": SCHEMA_NAME},\n",
+    "    ResultConfiguration={\n",
+    "        \"OutputLocation\": S3_STAGING_DIR,\n",
+    "        \"EncryptionConfiguration\": {\"EncryptionOption\": \"SSE_S3\"},\n",
+    "    },\n",
+    ")\n",
+    "uscounty = download_and_load_query_results(athena_client, response)"
    ]
   },
   {
